# smart_finance

ai_orchestration_service/smart_finance_ai_orchestration_service/: main.py  pyproject.toml  server.py
ai_orchestration_service/smart_finance_ai_orchestration_service/cognition/: agent.py  autogen.py  config.py  crewai.py  lang_chain.py  lang_graph.py  multi_agent.py  ports.py  repositories.py  retrieval.py  schemas.py  vectorstores.py
ai_orchestration_service/smart_finance_ai_orchestration_service/cognition/cliente/agente/: cliente_agente.py
ai_orchestration_service/smart_finance_ai_orchestration_service/cognition/cliente/domain/: cliente.py
ai_orchestration_service/smart_finance_ai_orchestration_service/cognition/cliente/repository/: cliente_repository.py
ai_orchestration_service/smart_finance_ai_orchestration_service/cognition/cliente/routers/: __init__.py  cliente_routers.py
ai_orchestration_service/smart_finance_ai_orchestration_service/cognition/cliente/service/: __init__.py  cliente_service.py
ai_orchestration_service/smart_finance_ai_orchestration_service/cognition/config/: postgres_config.py
ai_orchestration_service/smart_finance_ai_orchestration_service/cognition/exemplos/: adapters.py  autogen.py  crewai.py  lang_chain.py  lang_graph.py  main.py  multi_agent.py  retrieval.py  teste.py
backend/smart_finance_backend/crates/boleto/: Cargo.toml
backend/smart_finance_backend/crates/cartao/: Cargo.toml
backend/smart_finance_pix_backend/: Cargo.toml
inference_gateway/smart_finance_ai_inference_gateway/: Cargo.toml
(+3 files in other folders)
