[project]
name = "ai-backend-smart-finance-cognition"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "crewai>=1.15.2",
    "fastapi>=0.139.0",
    "granian[reload,uvloop]>=2.0.0",
    "httpx>=0.28.1",
    "langchain>=1.3.12",
    "langchain-openai>=1.3.4",
    "langgraph>=1.2.8",
    "pymilvus>=2.6.0",
    "pydantic_settings",
    "asyncpg",
    "attrs>=26.1.0",
]
